tests/negative/line_marker.c
#line 77
int main(void) { return @; }
